# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/etc-update:
  Fixed etc-update so it actually runs; long story short, the portageq
  calls for getting CONFIG_PROTECT(|_MASK) were wrong.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
  Added kludge to filtering for env reloading to match the export kludge
  added to 2.0.51.  This code must stay in as long as .51 env's 
  *potentially* exist on a users system.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-daemon.sh:
  Made it much more noisy when a violation is hit.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> 
  bin/affect-fakeroot-perms.sh:  rewrote this script so that it's less 
  likely to piss off fakeroot by spawning multiple instances of a client.

  10 Nov 2004; Marius Mauch <genone@gentoo.org> +pym/portage_versions.py,
  bin/db-update.py, bin/emerge, bin/fixvirtuals, bin/pkgname, bin/repoman,
  pym/ebuild.py, pym/portage.py, pym/portage_dep.py:
  Integrated the new version parsing and comparison code from bug #37406, moved
  pkgsplit, catpkgsplit, pkgcmp, vercmp and ververify in portage_versions.py
  and changed all calls to them. The new code allows for more flexible 
  version strings, some functions probably still have to be fixed to work
  with those new extensions.

  09 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/dcache.py, 
  pym/orig_dict_cache.py, portage.py:  Removed listdir optional arg
  EmptyOnError- wasn't abided by for non-recursive calls, for recursive calls
  it only returned None when recursing.  Optional arg wasn't used, so it's gone.